--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -89,7 +89,7 @@
                         <div class="panel-body">
                             {% for changedate, item in history.items %}
                                 <div class="row">
-                                    <div class="col-sm-4">
+                                    <div class="col-sm-3">
                                         {% if forloop.counter == 1 %}<strong>{% endif %}
                                         {{ changedate|timestamp_from_epoch }}
                                         {% if forloop.counter == 1 %}</strong>{% endif %}
@@ -100,7 +100,12 @@
                                     <td>history id: {{ item.activity.history_id }}</td>
                                     -->
                                     {% with dealid=item.activity.activity_identifier|addstr:"_"|addstr:changedate %}
-                                        <div class="col-sm-4">
+                                        <div class="col-sm-3">
+
+                                            {{ item.activity.changed_by }}
+                                        </div>
+
+                                        <div class="col-sm-3">
 
                                             {# TODO: Insert correct link and maybe disable button for currently version displayed  #}
                                             <a type="button" class="btn"
@@ -109,7 +114,7 @@
                                             </a>
                                         </div>
 
-                                        <div class="col-sm-4">
+                                        <div class="col-sm-3">
 
                                             <a type="button" class="btn"
                                                     {% if not forloop.last %}
