Added template for server error 500
Former-commit-id: 71365b4e158e5731ce59e1c4a7734ce59abb8ea5

--- a/templates/500.html
+++ b/templates/500.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block page_title %}{% trans "Server Error" %}{% endblock %}
 {% block title %}{% trans "Looks like something went wrong" %}{% endblock %}
