--- a/templates/500.html
+++ b/templates/500.html
@@ -5,5 +5,7 @@
 {% block title %}{% trans "Looks like something went wrong" %}{% endblock %}
 
 {% block content %}
-{% trans "We track these errors automatically, but if the problem persists feel free to contact us. In the meantime, try refreshing." %}
+<div class="block">
+	<p>{% trans "We track these errors automatically, but if the problem persists feel free to contact us. In the meantime, try refreshing." %}</p>
+</div>
 {% endblock %}
