Improved deal link in data section
Former-commit-id: 6fd68eb692706a420a1feec27bfa521a58409092

--- a/grid/templates/all_deals.html
+++ b/grid/templates/all_deals.html
@@ -259,9 +259,6 @@
                             </th>
                         {% endif %}
                     {% endfor %}
-                    {% if "deal_id" in columns %}
-                        <th></th>
-                    {% endif %}
                 </tr>
                 </thead>
                 <tbody>
@@ -270,7 +267,7 @@
                         {% for column in columns %}
                             {% if column == "deal_id" %}
                                 <td class="deal-id">
-                                    <a href="{% url 'deal_detail' item.deal_id %}">{{ item.deal_id }}</a>
+                                    <a href="{% url 'deal_detail' item.deal_id %}" class="label label-default">{{ item.deal_id }}</a>
                                 </td>
                             {% elif column == "crop" %}
                                 <td style="width:341px">
