--- a/editor/templates/dashboard.html
+++ b/editor/templates/dashboard.html
@@ -30,6 +30,7 @@
 
 {% block content %}
     <div class="dashboard">
+        {% if perms.editor.editor_filter %}
         <div class="row">
             <form method="POST" action="{% url 'api_dashboard_filter' %}" id="dashboard-filter">
                 {% csrf_token %}
@@ -177,6 +178,7 @@
             });
             </script>
         </div>
+        {% endif %}
 
         <div class="row">
             <div class="col-md-6">
