--- a/charts/templates/charts/subnav.html
+++ b/charts/templates/charts/subnav.html
@@ -25,7 +25,7 @@
                                 <li><a class="change-variable" href="{% url "chart_overview" %}?variable=intention_of_investment">{% trans "Intention of investment" %}</a></li>
                                 <li><a class="change-variable" href="{% url "chart_overview" %}?variable=negotiation_status">{% trans "Negotiation status" %}</a></li>
                                 <li><a class="change-variable" href="{% url "chart_overview" %}?variable=implementation_status">{% trans "Implementation status" %}</a></li>
-                                <li><a class="change-variable" href="{% url "chart_overview" %}?variable=investment_in_agriculture">{% trans "Investment in Agriculture" %}</a></li>
+                                <li><a class="change-variable" href="{% url "chart_overview" %}?variable=agriculture">{% trans "Investment in Agriculture" %}</a></li>
                             </ul>
                         </li>
                         <li{% if chart == "chart_map_of_investments" %} class="active"{% endif %}><a href="{% url "chart_map_of_investments" %}">{% trans "Global map of investments" %}</a></li>
