--- a/grid/templates/all_deals.html
+++ b/grid/templates/all_deals.html
@@ -24,13 +24,13 @@
 {% endblock %}
 
 {% block subnav_inner %}
-    <li role="presentation"><a href="../map/">
+    <li role="presentation"><a href="{% url 'map' %}">
         <i class="lm lm-map-marker"></i>{% trans "Map" %}
     </a></li>
     <li role="presentation" class="active"><span>
         <i class="lm lm-table"></i>{% trans "Data" %}
     </span></li>
-    <li role="presentation"><a href="../charts/">
+    <li role="presentation"><a href="{% url 'charts' %}">
         <i class="lm lm-bar-chart"></i>{% trans "Charts" %}
     </a></li>
     <li class="divider"></li>
